--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
         "sass": "^1.56.1",
         "vite": "^4.0.0",
         "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "admin-lte": "^3.2.0",
+        "sweetalert2": "^11.7.3"
     }
 }
