--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "admin-lte": "^3.2.0",
+        "alpinejs": "^3.12.0",
         "bootstrap": "4.6",
         "jquery": "^3.6.4",
         "sweetalert2": "^11.7.3"
