--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "admin-lte": "^3.2.0",
         "alpinejs": "^3.12.0",
         "bootstrap": "4.6",
+        "form-data": "^4.0.0",
         "jquery": "^3.6.4",
         "sweetalert2": "^11.7.3"
     }
